# grease

./: .coderabbit.yaml  .env.cucumber  .env.test  .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml  rustfmt.toml
babyjubjub/: Cargo.toml  README.md
babyjubjub/bench/: babyjubjub.rs
babyjubjub/src/: constants.rs  curve.rs  ff.rs  lib.rs  point.rs  serai.rs
babyjubjub/src/fields/: fq.rs  fr.rs  tests.rs
babyjubjub/src/serai/: curve.rs  mod.rs  point.rs  scalar.rs
babyjubjub/test_vectors/: create_vectors.mjs  package-lock.json  package.json  test_vectors.json
circuits/: Cargo.toml  Nargo.toml  README.md  dleq_different_curves.py  generate_vectors.sh  package.json  test_vectors.csv  test_vectors_chain.csv
circuits/examples/: init.rs
circuits/init/: Nargo.toml  Prover.toml  README.md
circuits/init/src/: main.nr
circuits/noir/: Nargo.toml  README.md
circuits/noir/src/: main.nr
circuits/scripts/: calc_bjj_pubkey.js  calc_encrypt.js  calc_feldman_vss.js  calc_nizk.js  calc_tests.js  calc_vcof.js  calc_witness_zero.js  dleq_different_curves.js  extend_tests.ts
circuits/src/: bytecode_verification.rs  helpers.rs  lib.rs  main.rs  runner.rs
circuits/test_vectors/: demo.json  evil_demo.json  init.json  update.json
circuits/test_vectors/demo/: Nargo.toml
circuits/test_vectors/demo/src/: main.nr
circuits/update/: Nargo.toml  Prover.toml  benchmark.sh
circuits/update/src/: main.nr
e2e/: Cargo.toml
e2e/fixtures/: identities.yml
e2e/src/: grease.rs  lib.rs  monero_node.rs  user.rs
e2e/tests/: cucumber_tests.rs  wallet_tests.rs
e2e/tests/cucumber/: channel.rs  mod.rs  node.rs  wallet.rs  world.rs
e2e/tests/features/: happy_path.feature  multisig_wallet.feature  node.feature
e2e/tests/wallet/: mod.rs  multisig.rs  node.rs  world.rs
grease_cli/: Cargo.toml
grease_cli/src/: channel_management.rs  config.rs  error.rs  id_management.rs  launch_app.rs  lib.rs  main.rs  other_commands.rs  server.rs
grease_cli/src/interactive/: formatting.rs  menus.rs  mod.rs
grumpkin/: Cargo.toml
grumpkin/src/: constants.rs  curve.rs  lib.rs
grumpkin/src/serai/: curve.rs  mod.rs  point.rs  scalar.rs
libgrease/: Cargo.toml  README.md
libgrease/examples/: multisig.rs  rpc_demo.rs
libgrease/src/: adapter_signature.rs  amount.rs  balance.rs  cas.rs  channel_id.rs  channel_metadata.rs  clars.rs  clras.rs  error.rs  file_store.rs  hashes.rs  helpers.rs  keys.rs  lib.rs  monero_impl.rs  multisig.rs  payment.rs  ring_ct.rs  vcof_25519.rs
libgrease/src/crypto/: cas.rs  clras.rs  commit.rs  common_types.rs  dleq.rs  hashes.rs  keys.rs  mod.rs  monero_impl.rs  pok.rs  ring_ct.rs  shard_encryption.rs  traits.rs  vcof_25519.rs  witness.rs  zk_objects.rs
libgrease/src/cryptography/: adapter_signature.rs  commit.rs  common_types.rs  crypto_context.rs  dleq.rs  ecdh.rs  ecdh_encrypt.rs  encryption_context.rs  hashes.rs  kes_functions.rs  keys.rs  mod.rs  noir_prover.rs  pok.rs  secret_bytes.rs  secret_encryption.rs  serializable_secret.rs  vcof.rs  vcof_grkn_pos2.rs  vcof_snark_dleq.rs  witness.rs  zk_objects.rs
libgrease/src/cryptography/mocks/: mock_vcof.rs  mod.rs
libgrease/src/cryptography/vcof_impls/: grease_noir.rs  grumpkin_poseidon2_next_witness.rs  mod.rs
libgrease/src/grease_protocol/: adapter_signature.rs  channel_keys.rs  close_channel.rs  commit.rs  dleq.rs  error.rs  establish_channel.rs  force_close_channel.rs  kes.rs  kes_establishing.rs  mod.rs  multisig_wallet.rs  open_channel.rs  pok.rs  propose_channel.rs  prover.rs  tests.rs  update_channel.rs  utils.rs  witness.rs
libgrease/src/grease_protocol/protocol/: mod.rs  open.rs
libgrease/src/impls/: mock_multisig_wallet.rs  mod.rs  multisig.rs
libgrease/src/impls/tests/: close_protocol.rs  establish_protocol.rs  force_close_protocol.rs  mock_multisig_wallet.rs  mod.rs  multisig_setup.rs  multisig_wallet.rs  open_protocol.rs  propose_protocol.rs  update_protocol.rs
libgrease/src/kes/: data_objects.rs  dummy_impl.rs  error.rs  mod.rs  traits.rs
libgrease/src/key_escrow_services/: configuration.rs  mod.rs
libgrease/src/monero/: data_objects.rs  dummy_impl.rs  error.rs  helpers.rs  mod.rs  state_machine.rs  traits.rs  watcher.rs
libgrease/src/noir_impl/: mod.rs  preprocess.rs
libgrease/src/payment_channel/: dummy_impl.rs  error.rs  mod.rs  multisig_keyring.rs  multisig_negotioation.rs  status.rs  traits.rs
libgrease/src/state_machine/: closed_channel.rs  closing_channel.rs  commitment_tx.rs  disputing_channel.rs  error.rs  establishing_channel.rs  events.rs  lifecycle.rs  mod.rs  multisig_setup.rs  new_channel.rs  open_channel.rs  proposing_channel.rs  timeouts.rs  traits.rs
libgrease/src/state_machine_v1/: disputing_channel.rs  establishing_channel.rs  kes_verified.rs  lifecycle.rs  mod.rs  open_channel.rs  traits.rs  wallet_created.rs  wallet_state_machine.rs
libgrease/src/storage/: file_store.rs  mod.rs  traits.rs
libgrease/src/tests/: establish_channel_tests.rs  force_close_protocol.rs  mod.rs  propose_channel_tests.rs  update_protocol.rs
libgrease/src/wallet/: common.rs  helpers.rs  mod.rs  multisig_wallet.rs  transaction_monitor.rs  wallet.rs  watch_only.rs
p2p/: Cargo.toml  README.md
p2p/src/: async_wrapper.rs  behaviour.rs  behaviour_v2.rs  data_objects.rs  delegate.rs  delegates.rs  errors.rs  event_loop.rs  grease_channel_events.rs  identity.rs  key_manager.rs  lib.rs  message_types.rs  messages.rs  network_client.rs  noir_delegate.rs  payment_channel.rs  pending_updates.rs  server.rs
p2p/src/delegates/: dummy_delegate.rs  error.rs  mod.rs  traits.rs
p2p/src/grease/: client.rs  grease_message_broker.rs  message_types.rs  mod.rs  network_client.rs  payment_channel.rs  pending_updates.rs
p2p/src/grease_v2/: mod.rs
p2p/src/p2p_networking/: async_wrapper.rs  event_loop.rs  mod.rs  request_response.rs
wallet/: Cargo.toml
wallet/examples/: multisig.rs  payment_channel_demo.rs  rpc_demo.rs
wallet/src/: common.rs  errors.rs  lib.rs  multisig_wallet.rs  payments.rs  transaction_monitor.rs  utils.rs  virtual_wallet.rs  wallet.rs  watch_only.rs
(+86 files in other folders)
