[workspace]
resolver = "2"
members = [
    "libgrease",
    "grease_cli",
    "p2p",
]

[workspace.dependencies]
grease-p2p = { version = "0.1.0", path = "./p2p" }
libgrease = { version = "0.1.0", path = "./libgrease" }

anyhow = { version = "1.0.96" }
blake2 = {  version = "0.10.6"}
clap = { version = "4.5.31" }
env_logger = { version = "0.11.6" }
futures = { version = "0.3" }
libp2p = { version = "0.55", default-features = false }
libp2p-request-response = { version = "0.28.0", default-features = false }
log = { version = "0.4" }
monero = { version = "0.21.0", features = ["serde"] }
rand = { version = "0.9.0" }
ron = {  version = "0.10.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.140" }
serde_yml = {  version = "0.0.12" }
thiserror = { version = "2.0.11" }
tokio = { version = "1.38", default-features = false }
