[workspace]
resolver = "2"
members = [
    "babyjubjub",
    "circuits",
    "e2e",
    "grease_cli",
    "libgrease",
    "p2p",
    "wallet",
]

[workspace.dependencies]
grease-babyjubjub = { version = "0.1.0", path = "./babyjubjub" }
grease-p2p = { version = "0.1.0", path = "./p2p" }
libgrease = { version = "0.1.0", path = "./libgrease" }
wallet = { version = "0.1.0", path = "./wallet" }
circuits = { version = "0.1.0", path = "./circuits" }

anyhow = { version = "1.0.96" }
async-trait = { version = "0.1" }
blake2 = {  version = "0.10.6"}
clap = { version = "4.5.31" }
chrono = { version = "0.4.41", features = ["serde"] }
hex = { version = "0.4.3" }
env_logger = { version = "0.11.6" }
futures = { version = "0.3" }
libp2p = { version = "0.55", default-features = false }
log = { version = "0.4" }
monero = { version = "0.21.0", features = ["serde"] }
num-bigint = { version = "0.4.6", features = ["serde"] }
rand_core = { version = "0.6.4" }
ron = {  version = "0.10.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.140" }
serde_yml = {  version = "0.0.12" }
thiserror = { version = "2.0.17" }
tokio = { version = "1.38", default-features = false }
zeroize = {  version = "1.8.1" }

# Serai dependencies
dalek-ff-group = {  version = "0.4", git = "https://github.com/serai-dex/serai.git", rev = "dc1b8dfccd68b7c2eb4359a1e37b55ce5e4453b5" }
flexible-transcript = { version = "0.3", git = "https://github.com/serai-dex/serai.git", rev = "dc1b8dfccd68b7c2eb4359a1e37b55ce5e4453b5" }

[workspace.dependencies.dleq]
version = "0.4.1"
git = "https://github.com/serai-dex/serai.git"
rev = "dc1b8dfccd68b7c2eb4359a1e37b55ce5e4453b5"
features = ["std", "experimental"]

[workspace.dependencies.ciphersuite]
version = "0.4.1"
git = "https://github.com/serai-dex/serai.git"
rev = "dc1b8dfccd68b7c2eb4359a1e37b55ce5e4453b5"
features = ["dalek", "ed25519", "secp256k1"]

[workspace.dependencies.modular-frost]
version = "0.8"
git = "https://github.com/serai-dex/serai.git"
rev = "dc1b8dfccd68b7c2eb4359a1e37b55ce5e4453b5"
features = ["ed25519", "ristretto", "secp256k1"]

[workspace.dependencies.criterion]
version = "0.7.0"

