[package]
name = "grease-babyjubjub"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-ff = { version = "0.5.0", features = ["std"] }
ark-ec = { version = "0.5.0", features = ["std"] }
ark-std = { version = "0.5.0", features = ["std"] }
ark-serialize = { version = "0.5.0", features = ["std"] }
zeroize = {  version = "1.8.1", optional = true }
group = { version = "0.13.0", optional = true }
subtle = { version = "2.2.1", default-features = false, optional = true }

[features]
default = ["serai"]
asm = ["ark-ff/asm"]
zeroize = ["zeroize/zeroize_derive"]
serai = ["zeroize/zeroize_derive", "subtle", "group"]

[dev-dependencies]
ark-algebra-test-templates = { version = "0.5.0" }
