[package]
name = "grease-babyjubjub"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-ff = { version = "0.5.0", features = ["std"] }
ark-ec = { version = "0.5.0", features = ["std"] }
ark-std = { version = "0.5.0", features = ["std"] }
ark-serialize = { version = "0.5.0", features = ["std"] }
blake2 = { workspace = true, optional = true }
zeroize = {  version = "1.8.1", optional = true }
group = { version = "0.13.0", optional = true }
subtle = { version = "2.2.1", default-features = false, optional = true }
ciphersuite = { workspace = true, optional = true }
elliptic-curve = { version = "0.13", default-features = false, features = ["hash2curve"], optional = true }

[features]
default = ["serai"]
asm = ["ark-ff/asm"]
zeroize = ["zeroize/zeroize_derive"]
serai = ["zeroize/zeroize_derive", "subtle", "group", "ciphersuite", "blake2", "elliptic-curve"]

[dev-dependencies]
ark-algebra-test-templates = { version = "0.5.0" }
ff-group-tests = { version = "0.13.0" }
serde_json = "1.0.145"
