[package]
name = "circuits"
version = "0.1.0"
edition = "2021"

[features]
default = []
maketestvectors = [] # feature has no explicit dependencies

[dependencies]
libgrease = { workspace = true }

babyjubjub-rs = "0.0.11"
blake2 = "0.10"
num-bigint = { workspace = true }
num-traits = "0.2"
curve25519-dalek = { version = "4.1.3", features = ["digest"] }
ff_ce = "0.11.0"
lazy_static = "1.5"
taceo-poseidon2 = "0.2.0"
ark-bn254 = { version = "0.5.0", features = ["std"] }
hex = { workspace = true }
toml = "0.8"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = { workspace = true }
rand = { version = "0.8.5" }
rand_core = { workspace = true }
log = { workspace = true }
zkuh-rs = { version = "1.7.0", git = "https://github.com/grease-xmr/aztec-packages.git", rev = "9c6ccfb5720ceebd75fd497c8ea05c404c55d99f" }
grease-babyjubjub = { workspace = true, features = ["serai"] }
ark-ff = { version = "0.5.0", features = ["std"] }
ark-std = { version = "0.5.0", features = ["std"] }
group = { version = "0.13.0" }
elliptic-curve = { version = "0.13", default-features = false, features = ["hash2curve"] }

[dev-dependencies]
env_logger = "0.11.8"
serial_test = "3.2.0"

