[package]
name = "circuits"
version = "0.1.0"
edition = "2021"

[dependencies]
libgrease = { workspace = true }

babyjubjub-rs = "0.0.11"
blake2 = "0.10"
num-bigint = "0.4.3"
num-traits = "0.2"
curve25519-dalek = { version = "4.1.3", features = ["digest"] }
ff_ce = "0.11.0"
lazy_static = "1.5"
poseidon-rs = "0.0.8"
hex = { workspace = true }
toml = "0.8"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = { workspace = true }
rand = { workspace = true }
log = { workspace = true }
zkuh-rs = { version = "1.7.0", git = "https://github.com/grease-xmr/aztec-packages.git", rev = "9c6ccfb5720ceebd75fd497c8ea05c404c55d99f" }

[dev-dependencies]
env_logger = "0.11.8"
serial_test = "3.2.0"

