[package]
name = "e2e"
version = "0.1.0"
edition = "2021"


[dependencies]
libgrease = { workspace = true }
grease-cli = { version = "0.1", path = "../grease_cli" }
grease-p2p = { workspace = true }
wallet = { workspace = true }

anyhow = { workspace = true }
log = { workspace = true }
monero = { workspace = true }
tokio = { workspace = true, features = ["full"]}

[dependencies.monero-simple-request-rpc]
version = "0.1"
git = "https://github.com/serai-dex/serai.git"
branch = "next"

[dependencies.monero-rpc]
version = "0.1"
git = "https://github.com/serai-dex/serai.git"
branch = "next"

[dependencies.monero-address]
version = "0.1"
git = "https://github.com/serai-dex/serai.git"
branch = "next"

[dev-dependencies]
dotenvy = "0.15.0"
env_logger = "0.11.3"
cucumber = { version = "0.21.1", features = ["libtest"] }
futures-util = "0.3.30"

[[test]]
name = "cucumber_tests" # this should be the same as the filename of your test target
harness = false  # allows Cucumber to print output instead of libtest
