[package]
name = "e2e"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { workspace = true }
ciphersuite = { workspace = true }
grease-cli = { version = "0.1", path = "../grease_cli" }
grease-p2p = { workspace = true }
libgrease = { workspace = true }
log = { workspace = true }
monero = { workspace = true }
rand_core = { workspace = true }
tokio = { workspace = true, features = ["full"]}
wallet = { workspace = true }


[dependencies.monero-simple-request-rpc]
version = "0.1"
git = "https://github.com/serai-dex/serai.git"
rev = "dc1b8dfccd68b7c2eb4359a1e37b55ce5e4453b5"

[dependencies.monero-rpc]
version = "0.1"
git = "https://github.com/serai-dex/serai.git"
rev = "dc1b8dfccd68b7c2eb4359a1e37b55ce5e4453b5"

[dependencies.monero-address]
version = "0.1"
git = "https://github.com/serai-dex/serai.git"
rev = "dc1b8dfccd68b7c2eb4359a1e37b55ce5e4453b5"

[dev-dependencies]
dotenvy = "0.15.0"
env_logger = "0.11.3"
cucumber = { version = "0.21.1", features = ["libtest"] }
futures-util = "0.3.30"

[[test]]
name = "cucumber_tests" # this should be the same as the filename of your test target
harness = false  # allows Cucumber to print output instead of libtest
