[package]
name = "grease-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
grease-p2p = { workspace = true }
libgrease = { workspace = true }

anyhow = { workspace = true }
ciphersuite = { workspace = true }
dalek-ff-group = { workspace = true }
hex = { workspace = true }
clap = { workspace = true, features = ["derive", "env", "unicode"] }
dialoguer = { version = "0.11.0", default-features = false, features = ["completion", "fuzzy-select", "history", "editor", "password"] }
env_logger = { workspace = true }
libp2p = { workspace = true }
log = { workspace = true }
monero = { workspace = true }
prettytable-rs = { version = "0.10.0" }
rand = { version = "0.9.0" }
rand_core = { workspace = true }
qrcode = {  version = "0.14.1" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
yaml_serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
zeroize = { workspace = true }

# Password-based encryption for secrets
argon2 = "0.5"
chacha20poly1305 = "0.10"
