[package]
name = "libgrease"
version = "0.1.0"
edition = "2021"

[features]
mocks = []
default = ["mocks"]

[dependencies]

acir_field = { version = "1.0.0-beta.15", git = "https://github.com/grease-xmr/aztec-packages.git", rev = "70b18ddec1b713a83f782622acfdc0c4d6f5f83f" }
anyhow = { workspace = true }
async-trait = { workspace = true }
bn254_blackbox_solver = { version = "1.0.0-beta.15", git = "https://github.com/grease-xmr/aztec-packages.git", rev = "70b18ddec1b713a83f782622acfdc0c4d6f5f83f" }
taceo-poseidon2 = { version = "0.2.1", features = ["bn254", "t2", "t3"] }
ark-bn254 = "0.5"
ark-ff = "0.5"
blake2 = { workspace = true }
chrono = { workspace = true }
curve25519-dalek = { version = "4.1.3", features = ["digest"] }
digest = "0.10.7"
futures = { version = "0.3.31" }
grease-babyjubjub = { workspace = true, features = ["serai"] }
grease-grumpkin = { workspace = true, features = ["serai"] }
hex = { workspace = true }
k256 = { version = "0.13", default-features = false, features = ["arithmetic"] }
log = "0.4.27"
monero = { workspace = true }
num-bigint = { workspace = true }
num-traits = "0.2"
paste = "1.0.11"
rand_core = { workspace = true }
ron = {  workspace = true }
serde = { version = "1.0.219", features = ["derive"] }
subtle = "2.6.1"
thiserror = "2.0.12"
zeroize = {  workspace = true }
zkuh-rs = { version = "1.14", git = "https://github.com/grease-xmr/aztec-packages.git", rev = "70b18ddec1b713a83f782622acfdc0c4d6f5f83f" }

# Serai dependencies
ciphersuite = { workspace = true }
dalek-ff-group = { workspace = true }
dleq = { workspace = true }
flexible-transcript = { workspace = true }
modular-frost = {  workspace = true }

[dev-dependencies]
env_logger = "0.11.8"
sha3 = "0.10"
futures = { version = "0.3.31", features = ["executor"] }
serde_json = { workspace = true }
tokio = { version = "1", features = ["rt", "macros"] }
