[package]
name = "grease-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
libgrease = { workspace = true }
wallet = { workspace = true }

blake2 = "0.10.6"
ciphersuite = { workspace = true }
dalek-ff-group = { workspace = true }
futures = { workspace = true }
hex = "0.4.3"
libp2p = { workspace = true, features = [ "identify", "json", "macros", "noise", "request-response", "tcp", "tokio", "yamux"] }
log = { workspace = true }
monero = { workspace = true }
paste = { version = "1.0.15" }
rand = { version = "0.9.0" }
rand_core = { workspace = true }
ron = { workspace = true }
serde = { workspace = true, features = ["derive"] }
yaml_serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
async-trait = "0.1.89"

[dev-dependencies]
ciphersuite = { workspace = true }
env_logger = { workspace = true }
grease-babyjubjub = { workspace = true }
tempfile = "3.17.1"
