[package]
name = "wallet"
version = "0.1.0"
edition = "2021"
description = "MVP multisignature Monero wallet using MuSig and FROST"
license = "MIT OR Apache-2.0"
repository = "https://github.com/grease-xmr/grease"

[dependencies]
libgrease = { workspace = true }

blake2 = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
log = "0.4.27"
monero = { workspace = true, features = ["serde"] }
rand_core = { version = "0.6.4" }
rand_chacha = {  version = "0.3.1"   }
serde = { workspace = true }
serde_json = {workspace = true}
thiserror = { workspace = true }
tokio = { workspace = true }
zeroize = {  version = "1.8.1" }

[dependencies.monero-wallet]
version = "0.1"
git = "https://github.com/serai-dex/serai.git"
branch = "next"
features = ["multisig"]

[dependencies.monero-rpc]
version = "0.1"
git = "https://github.com/serai-dex/serai.git"
branch = "next"

[dependencies.monero-simple-request-rpc]
version = "0.1"
git = "https://github.com/serai-dex/serai.git"
branch = "next"

[dependencies.monero-serai]
version = "0.1.4-alpha"
git = "https://github.com/serai-dex/serai.git"
branch = "next"

[dependencies.modular-frost]
version = "0.8.1"
git = "https://github.com/serai-dex/serai.git"
branch = "next"
features = ["tests"]

[dependencies.ciphersuite]
version = "0.4.1"
git = "https://github.com/serai-dex/serai.git"
branch = "next"
features = ["dalek"]

[dependencies.dalek-ff-group]
version = "0.4.1"
git = "https://github.com/serai-dex/serai.git"
branch = "next"

[dev-dependencies]
rand = { workspace = true }
env_logger = "0.11.8"

