[package]
name = "wallet"
version = "0.1.0"
edition = "2021"
description = "MVP multisignature Monero wallet using MuSig and FROST"
license = "MIT OR Apache-2.0"
repository = "https://github.com/grease-xmr/grease"

[dependencies]
libgrease = { workspace = true }

blake2 = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
log = "0.4.27"
monero = { workspace = true, features = ["serde"] }
rand_core = { version = "0.6.4" }
rand_chacha = {  version = "0.3.1"   }
serde = { workspace = true }
serde_json = {workspace = true}
thiserror = { workspace = true }
tokio = { workspace = true }
zeroize = {  version = "1.8.1" }
modular-frost = { workspace = true }
ciphersuite = { workspace = true }
dalek-ff-group = { workspace = true }

[dependencies.monero-wallet]
version = "0.1"
git = "https://github.com/serai-dex/serai.git"
rev = "dc1b8dfccd68b7c2eb4359a1e37b55ce5e4453b5"
features = ["multisig"]

[dependencies.monero-serai]
version = "0.1.4-alpha"
git = "https://github.com/serai-dex/serai.git"
rev = "dc1b8dfccd68b7c2eb4359a1e37b55ce5e4453b5"

[dependencies.monero-rpc]
version = "0.1"
git = "https://github.com/serai-dex/serai.git"
rev = "dc1b8dfccd68b7c2eb4359a1e37b55ce5e4453b5"

[dependencies.monero-simple-request-rpc]
version = "0.1"
git = "https://github.com/serai-dex/serai.git"
rev = "dc1b8dfccd68b7c2eb4359a1e37b55ce5e4453b5"

[dev-dependencies]
env_logger = "0.11.8"
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

